fixed overflow bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -126,7 +126,7 @@ body {
 						color: #fff;
 						h1 {
 							@include font($helv, 60px, 500, #fff);
-							line-height: 40px;
+							line-height: 1em;
 						
 						}
 						
@@ -178,60 +178,82 @@ body {
 								left: 26px;
 								height: 460px;
 								overflow: hidden;
+								.feed-container {
+									height: 100%;
+									width: 100%;
 								
-								#feed-list {
-									.feed-item {
-										width: 100%;
-										height: 130px;
-										background-color: #fff;
-										border-bottom: 1px solid #ededed;
-										padding: 10px;
-										position: relative;
-										h3 {
-											@include font($list, 16px, 500, #000);
-											margin-top: 5px;	
-											float: left;
-										}
-										.item-date {
-											@include font($helv, 12px, 300, lighten(#000, 50%));
-											display: inline-block;
-											float: left;
-											margin-top: 7px;
-											position: absolute;
-											right: 10px;
-										}
-										.item-author {
-											@include font($helv, 13px, 300, lighten(#000, 50%));
-											margin-top: 0;
-											position: absolute;
-											left: 10px;
-											top: 33px;
-										}
-										.item-description {
-											@include font($helv, 13px, 400, lighten(#000, 50%));
-											margin-top: 0;
-											line-height: 1.2em;
-											position: absolute;
-											top: 51px;
-											padding-right: 4px;
-											
-											.item-price, item-location {
-												font-weight: 500;
+									overflow-y: scroll;
+									overflow-x: hidden;
+									position: relative;
+					
+									padding-right: 20px;
+									left: 10px;
+									#feed-list {
+										
+										.feed-item {
+											width: 100%;
+											height: 130px;
+											background-color: #fff;
+											border-bottom: 1px solid #ededed;
+											padding: 10px;
+											position: relative;
+											h3 {
+												@include font($list, 16px, 500, #000);
+												margin-top: 5px;	
+												float: left;
+											}
+											.item-date {
+												@include font($helv, 12px, 300, lighten(#000, 50%));
+												display: inline-block;
+												float: left;
+												margin-top: 7px;
+												position: absolute;
+												right: 10px;
+											}
+											.item-author {
+												@include font($helv, 13px, 300, lighten(#000, 50%));
+												margin-top: 0;
+												position: absolute;
+												left: 10px;
+												top: 33px;
+											}
+											.item-description {
+												@include font($helv, 13px, 400, lighten(#000, 50%));
+												margin-top: 0;
+												line-height: 1.2em;
+												position: absolute;
+												top: 51px;
+												padding-right: 4px;
+												
+												.item-price, item-location {
+													font-weight: 500;
+												}
+												
+												.item-price {
+													color: green;
+												}
+												
 											}
 											
-											.item-price {
-												color: green;
-											}
-											
-										}
-										.item-info {
-											@include font($helv, 12px, 500, lighten(#000, 25%));
-											margin-top: 0;
-											position: absolute;
-											bottom: -5px;
-											right: 10px;
-											.item-comments {
-												margin-right: 20px;
+											.item-overlay {
+												background-color: #fff;
+												background: linear-gradient(to bottom,#fff 0,transparent 100%);
+												opacity: 0.5;
+												width: 100%;
+												height: 30px;
+												position: absolute;
+												bottom: 0;
+												.item-info {
+													opacity: 1;
+													@include font($helv, 12px, 500, lighten(#000, 25%));
+													margin-top: 0;
+													position: relative;
+													top: 10px;
+													right: -102px;
+													.item-comments {
+														margin-right: 20px;
+													}
+												}
 											}
 										}
 									}
@@ -285,11 +307,13 @@ body {
 @media screen and (max-width: 940px) {
 	body {
 		.wrapper {
-			.container {
-				.row {
-					.iphone-container {
-						.iphone {
-							margin-left: 0;
+			.bg {
+				.container {
+					.row {
+						.iphone-container {
+							.iphone {
+								margin-left: 0;
+							}
 						}
 					}
 				}
@@ -301,23 +325,30 @@ body {
 @media screen and (max-width: 850px) {
 	body {
 		.wrapper {
-			.container {
-				.row {
-					.iphone-container, .description {
-						width: 100%;
-					}
-					
-					.description {
-						padding-top: 20px;
-						top: 0;
-						
-						h1, h2 {
-							text-align: center;
+			.bg {
+				.container {
+					.row {
+						.iphone-container, .description {
+							width: 100%;
 						}
-					}
-					.iphone-container {
-						.iphone {
-							margin: 60px auto;
+						
+						.description {
+							padding-top: 20px;
+							top: 0;
+							
+							h1, h2 {
+								text-align: center;
+							}
+							.update-btn {
+								position: relative;
+								left: 50%;
+								transform: translateX(-50%);
+							}
+						}
+						.iphone-container {
+							.iphone {
+								margin: 60px auto;
+							}
 						}
 					}
 				}
@@ -342,17 +373,41 @@ body {
 	}
 }
 
+@media screen and (max-width: 550px) {
+	body {
+		.wrapper {
+			.bg {
+				.container {
+					.row {
+						.description {
+							h1 {
+								font-size: 36px;
+							}
+							
+							h2 {
+								font-size: 22px;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
 @media screen and (max-width: 450px) {
 	body {
 		.wrapper {
 			max-height: 800px;
 			overflow: hidden;
-			.container {
-				.row {
-					.iphone-container {
-						.iphone {
-							position: relative;
-							left: -15px;
+			.bg {
+				.container {
+					.row {
+						.iphone-container {
+							.iphone {
+								position: relative;
+								left: -15px;
+							}
 						}
 					}
 				}
@@ -383,12 +438,46 @@ body {
 @media screen and (max-width: 350px) {
 	body {
 		.wrapper {
-			.container {
-				.row {
-					.iphone-container {
-						.iphone {
-							left: -45px;
-							padding: 30px;
+			.bg {
+				.container {
+					.row {
+						.iphone-container {
+
+							.iphone {
+								width: 300px;
+								.screen-assets {
+									width: 259px;
+								}
+								.top-bar {
+									top: 89px;
+									left: 22px;
+								}
+								.feed {
+									top: 133px;
+									left: 22px;
+									
+									.feed-container {
+										#feed-list {
+											.feed-item {
+												h3 {
+													font-size: 14px;
+												}
+												.item-date, .item-author {
+													font-size: 9px;
+												}
+												.item-description, .item-comments, .item-attending {
+													font-size: 11px;
+												}
+												.item-overlay {
+													.item-info {
+														right: -59px;
+													}
+												}
+											}
+										}
+									}
+								}
+							}
 						}
 					}
 				}
